# MoMaLeNe

./: .gitignore  .gitmodules  README.md  main.ipynb  main.py  pyproject.toml
lib/: canvas.py  particle.py  renderer.py  simulator.py  timer.py  video.py
lib/sphere_rasterizer/: CMakeLists.txt  __init__.py  point3d.cpp  point3d.h  pybind11.cpp  pybind11.py
